force-app/main/default/objects/Reconciliation__c/Reconciliation__c.object-meta.xml
<CustomObject>
    <label>Reconciliation</label>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>