force-app/main/default/objects/Reconciliation__c/fields/BaseBankTransaction__c.field-meta.xml
<CustomField>
    <fullName>BaseBankTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Bank Transaction</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>Reconciliations</relationshipLabel>
    <relationshipName>ReconciliationsAsBase</relationshipName>
    <type>Lookup</type>
</CustomField>