force-app/main/default/objects/Reconciliation__c/fields/BaseSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>BaseSettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Settlement Line Item</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Reconciliations</relationshipLabel>
    <relationshipName>ReconciliationsAsBase</relationshipName>
    <type>Lookup</type>
</CustomField>