force-app/main/default/objects/Reconciliation__c/fields/BaseStatement__c.field-meta.xml
<CustomField>
    <fullName>BaseStatement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Statement</label>
    <referenceTo>Statement__c</referenceTo>
    <relationshipLabel>Reconciliations</relationshipLabel>
    <relationshipName>Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>