force-app/main/default/objects/Reconciliation__c/fields/BaseType_fm__c.field-meta.xml
<CustomField>
    <fullName>BaseType_fm__c</fullName>
    <formula>IF(
  NOT(ISBLANK(BaseBankTransaction__c)), 
  &quot;Bank Transaction&quot;,
  IF(
    NOT(ISBLANK(BaseSettlementLineItem__c)), 
    &quot;Settlement Line Item&quot;, 
    IF(
      NOT(ISBLANK(BaseStatement__c)),
      &quot;Statement&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <label>Base Type</label>
    <type>Text</type>
</CustomField>