force-app/main/default/objects/Reconciliation__c/fields/ConfirmedBy__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReconciliationsConfirmed</relationshipName>
    <type>Lookup</type>
</CustomField>