force-app/main/default/objects/Reconciliation__c/fields/ConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedDate__c</fullName>
    <label>Confirmed Date</label>
    <type>DateTime</type>
</CustomField>