force-app/main/default/objects/Reconciliation__c/fields/ReconciledAMT__c.field-meta.xml
<CustomField>
    <fullName>ReconciledAMT__c</fullName>
    <label>Reconciled AMT</label>
    <summarizedField>ReconciliationLineItem__c.ReconciledAMT__c</summarizedField>
    <summaryForeignKey>ReconciliationLineItem__c.RefReconciliation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>