force-app/main/default/objects/Reconciliation__c/fields/ReconciledCurrency__c.field-meta.xml
<CustomField>
    <fullName>ReconciledCurrency__c</fullName>
    <label>Reconciled Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>