force-app/main/default/objects/Reconciliation__c/fields/ReconciledDate__c.field-meta.xml
<CustomField>
    <fullName>ReconciledDate__c</fullName>
    <label>Reconciled Date</label>
    <type>Date</type>
</CustomField>