force-app/main/default/objects/Reconciliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BaseType_fm__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BaseBankTransaction__c</columns>
    <columns>BaseSettlementLineItem__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>